More work on tests and tidying up validation code.

--- a/lms/templates/cme_register.html
+++ b/lms/templates/cme_register.html
@@ -338,7 +338,7 @@
           ## Sub Specialty Select Field
           #####################################################
         
-        <li class="field required" style="display: none;">
+        <li class="field" style="display: none;">
           <label for="sub_specialty">Sub-Specialty</label>
           <select id="sub_specialty" name="sub_specialty" class="controller">
             <option value="">--</option>
