--- a/common/lib/xmodule/xmodule/css/capa/display.scss
+++ b/common/lib/xmodule/xmodule/css/capa/display.scss
@@ -30,7 +30,11 @@ iframe[seamless]{
 }
 
 section.problem-progress {
-  display: inline-block
+  display: inline-block;
+  color: #999;
+  font-size: em(16);
+  font-weight: 100;
+  padding-left: 5px;
 }
 
 section.problem {
