--- a/cms/templates/component.html
+++ b/cms/templates/component.html
@@ -31,11 +31,80 @@
 		</div> <!-- Module Actions-->
   </div>
 </div>
-
 <div class="component-actions">
   <a href="#" class="edit-button standard"><span class="edit-icon"></span>${_("Edit")}</a>
   <a href="#" class="delete-button standard"><span class="delete-icon"></span>${_("Delete")}</a>
   <a href="#" class="test-button standard">Test</a>
+</div>
+<div class="wrapper wrapper-component-tester">
+	<div class="component-tester" style="display: none">
+		<div class="component-edit-header">
+  			<span class="component-name"></span>
+  	  		<ul class="nav-edit-modes">
+  	  			<li id="editor-mode" class="mode active-mode" aria-controls="editor-tab" role="tab">
+  	  				<a href="#">Testing Summary</a>
+	  			</li>
+	  			<li id="settings-mode" class="mode active-mode" aria-controls="settings-tab" role="tab">
+	  				<a href="#">Editor</a>
+	  			</li>
+	  		</ul>
+		</div> <!-- Editor Header -->
+		<span class="component-paragraph">
+			<p>
+				anyone lived in a pretty how town<br>
+				(with up so floating many bells down)<br>
+				spring summer autumn winter<br>
+				he sang his didn't he danced his did
+			</p> <p>
+				Women and men(both little and small)<br>
+				cared for anyone not at all<br>
+				they sowed their isn't they reaped their same<br>
+				sun moon stars rain<br>
+			</p><p>
+				children guessed(but only a few<br>
+				and down they forgot as up they grew<br>
+				autumn winter spring summer)<br>
+				that noone loved him more by more<br>
+			</p><p>
+				when by now and tree by leaf<br>
+				she laughed his joy she cried his grief<br>
+				bird by snow and stir by still<br>
+				anyone's any was all to her<br>
+			</p><p>
+				someones married their everyones<br>
+				laughed their cryings and did their dance<br>
+				(sleep wake hope and then)<br>
+				they said their nevers they slept their dream<br>
+			</p><p>
+				stars rain sun moon<br>
+				(and only the snow can begin to explain<br>
+				how children are apt to forget to remember<br>
+				with up so floating many bells down)<br>
+			</p><p>
+				one day anyone died i guess<br>
+				(and noone stooped to kiss his face)<br>
+				busy folk buried them side by side<br>
+				little by little and was by was<br>
+			</p><p>
+				all by all and deep by deep<br>
+				and more by more they dream their sleep<br>
+				noone and anyone earth by april<br>
+				wish by spirit and if by yes.<br>
+			</p><p>
+				Women and men (both dong and ding)<br>
+				summer autumn winter spring<br>
+				reaped their sowing and went their came<br>
+				sun moon stars rain<br>
+			</p>
+		</span>
+		<div class="component-edit-modes">
+	        
+		</div>
+		<div class="row module-actions">
+	  		<a href="#" class="save-button">Run</a>
+	  		<a href="#" class="cancel-button">Done</a>
+		</div> <!-- Module Actions-->
+  </div>
 </div>
 <a data-tooltip='${_("Drag to reorder")}' href="#" class="drag-handle"></a>
 ${preview}
