--- a/cms/static/sass/views/_unit.scss
+++ b/cms/static/sass/views/_unit.scss
@@ -458,6 +458,48 @@ body.course.unit {
         }
       }
     }
+    
+    // Component Editing
+    .wrapper-component-tester {
+      z-index: 9999;
+      position: relative;
+      background: $white;
+    }
+    
+    .component-tester {
+      @include edit-box;
+      @include box-shadow(none);
+      display: none;
+      padding: 0;
+      border-radius: 2px 2px 0 0;
+
+      h3 {
+        margin-bottom: $baseline/2;
+        font-size: 18px;
+        font-weight: 700;
+      }
+
+      h5 {
+        margin-bottom: 8px;
+        color: #fff;
+        font-weight: 700;
+      }
+
+      .row {
+        margin-bottom: 0px;
+      }
+
+      // Module Actions, also used for Static Pages
+      .module-actions {
+        @include box-shadow(inset 0 1px 1px $shadow);
+        padding: 0 0 $baseline $baseline;
+        background-color: $gray-l6;
+
+        .save-button {
+        margin: ($baseline/2) 8px 0 0;
+        }
+      }
+    }
   }
 }
 
