less hackish get_html_form method

--- a/cms/templates/content_testing/test_summary.html
+++ b/cms/templates/content_testing/test_summary.html
@@ -1,5 +1,5 @@
-<%inherit file="../base.html" />
-<%namespace name='static' file='../static_content.html'/>
+##<%inherit file="../base.html" />
+##<%namespace name='static' file='../static_content.html'/>
 
 <!-- TODO decode course # from context_course into title -->
 <%block name="title">Test Summary</%block>
