--- a/cms/templates/content_testing/edit_test.html
+++ b/cms/templates/content_testing/edit_test.html
@@ -1,5 +1,5 @@
-<%inherit file="../base.html" />
-<%namespace name='static' file='../static_content.html'/>
+##<%inherit file="../base.html" />
+##<%namespace name='static' file='../static_content.html'/>
 
 <%block name="title">Create A Problem Test</%block>
 
